# OpsMineFlow

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.ja.md  README.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  runtime.rs
browser-extension/: README.md
docs/: OPEN_QUESTIONS.md
mac-agent/: README.md
scripts/: bootstrap_mac.sh  build_mac_agent.sh  check_licenses.sh  check_migrations.sh  check_no_external_network.sh  ci-protection-fixture.txt  dev.sh  dev_desktop.sh  install_mac.sh  lint.sh  package_macos.sh  perf_http_smoke.sh  perf_smoke.sh  run_local.sh  setup_mac.sh  smoke_lifecycle.sh  smoke_local.sh  stop_local.sh  test.sh
services/local-api/: README.md  pyproject.toml
services/local-api/src/opsmineflow_api/: __init__.py  activitywatch.py  app.py  auth.py  child_process.py  llm_handoff.py  migrations.py  recording.py  server.py  storage.py
services/local-api/tests/: test_api_logic.py  test_auth.py  test_project_isolation.py  test_storage_migrations.py
services/mining-core/: README.md  pyproject.toml
services/mining-core/src/opsmineflow_mining/: __init__.py  analysis.py  importers.py  models.py  pipeline.py  privacy.py  pydantic_models.py
services/mining-core/tests/: test_analysis.py  test_importers.py  test_pipeline.py
services/mining-core/tests/fixtures/: mixed-offset-golden.json
(+38 files in other folders)
