[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opsmineflow-local-api"
version = "0.1.0"
description = "Localhost-only API for OpsMineFlow"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "pydantic>=2.7,<3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9"
]

[tool.setuptools.packages.find]
where = ["src"]
