[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opsmineflow-mining-core"
version = "0.1.0"
description = "Local-first task mining and process mining core for OpsMineFlow"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "pydantic>=2.7,<3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9"
]

[tool.setuptools.packages.find]
where = ["src"]
