[package]
name = "opsmineflow"
version = "0.1.0"
description = "OpsMineFlow desktop shell"
authors = ["OpsMineFlow contributors"]
license = "Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
sha2 = "0.10"
tauri-plugin-single-instance = "2"
